--- a/00/ex01/Makefile
+++ b/00/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: mtak <mtak@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/08/07 20:31:07 by mtak              #+#    #+#              #
-#    Updated: 2021/08/07 20:43:15 by mtak             ###   ########.fr        #
+#    Updated: 2021/08/12 18:07:07 by mtak             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,7 +16,7 @@ SRCS = main.cpp \
 
 OBJS			= $(SRCS:.cpp=.o)
 
-CPP				= clang++
+CPP				= g++
 RM				= rm -f
 CPPFLAGS		= -Wall -Wextra -Werror -I.
 
