--- a/01/ex01/Makefile
+++ b/01/ex01/Makefile
@@ -5,24 +5,27 @@
 #                                                     +:+ +:+         +:+      #
 #    By: mtak <mtak@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/08/04 11:43:38 by mtak              #+#    #+#              #
-#    Updated: 2021/08/12 17:50:25 by mtak             ###   ########.fr        #
+#    Created: 2021/08/10 20:40:51 by mtak              #+#    #+#              #
+#    Updated: 2021/08/12 18:35:44 by mtak             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRCS			= megaphone.cpp
-OBJS			= $(SRCS:.cpp=.o)
+NAME = zombie
 
-CXX				= clang++
-RM				= rm -f
-CXXFLAGS		= -Wall -Wextra -Werror -I.
+SRCS = main.cpp\
+		Zombie.cpp\
+		ZombieHorde.cpp\
 
-NAME			= megaphone
+OBJS = $(SRCS:.cpp=.o)
+
+CPP = g++#clang++
+RM = rm -rf
+CPPFLAGS = -Wall -Wextra -Werror -I.
 
 all:			$(NAME)
 
 $(NAME):		$(OBJS)
-				$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
+				$(CPP) $(CPPFLAGS) -o $(NAME) $(OBJS)
 
 clean:
 				$(RM) $(OBJS)
@@ -32,9 +35,4 @@ fclean:			clean
 
 re:				fclean $(NAME)
 
-test:			$(NAME)
-				./megaphone "shhhhh... I think the students are asleep..."
-				./megaphone Damnit " ! " "Sorry students, I thought this thing was off."
-				./megaphone
-
-.PHONY:			all clean fclean re test
+.PHONY:			all clean fclean re
