--- a/01/ex04/Makefile
+++ b/01/ex04/Makefile
@@ -6,7 +6,7 @@
 #    By: mtak <mtak@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/08/12 21:46:54 by mtak              #+#    #+#              #
-#    Updated: 2021/08/12 21:47:30 by mtak             ###   ########.fr        #
+#    Updated: 2021/08/16 14:54:46 by mtak             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,7 @@ OBJS = $(SRCS:.cpp=.o)
 
 CPP = clang++
 RM = rm -rf
-CPPFLAGS = -Wall -Wextra -Werror -I.
+CPPFLAGS = -Wall -Wextra -Werror -I. -std=c++98 -pedantic
 
 all:			$(NAME)
 
