--- a/00/ex01/Makefile
+++ b/00/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: mtak <mtak@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/08/07 20:31:07 by mtak              #+#    #+#              #
-#    Updated: 2021/08/12 18:07:07 by mtak             ###   ########.fr        #
+#    Updated: 2021/08/17 22:24:52 by mtak             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,7 @@ OBJS			= $(SRCS:.cpp=.o)
 
 CPP				= g++
 RM				= rm -f
-CPPFLAGS		= -Wall -Wextra -Werror -I.
+CPPFLAGS		= -Wall -Wextra -Werror -I. -std=c++98 -pedantic
 
 NAME			= phonebook
 
