--- a/01/ex06/Makefile
+++ b/01/ex06/Makefile
@@ -6,7 +6,7 @@
 #    By: mtak <mtak@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/08/17 21:22:12 by mtak              #+#    #+#              #
-#    Updated: 2021/08/17 21:47:55 by mtak             ###   ########.fr        #
+#    Updated: 2021/08/17 22:24:52 by mtak             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,7 @@ OBJS = $(SRCS:.cpp=.o)
 
 CPP = clang++
 RM = rm -rf
-CPPFLAGS = -Wall -Wextra -Werror -I. -std=c++98 -pedantic
+CPPFLAGS = -Wall -Wextra -Werror -I. -std=c++98 -pedantic -std=c++98 -pedantic
 
 all:			$(NAME)
 
