0301 - 상속에서 생성자, 소멸자, 함수를 오버로딩 시 재정의를 해야하는지 고민 중

--- a/03/ex00/Makefile
+++ b/03/ex00/Makefile
@@ -15,7 +15,7 @@ SRCS = main.cpp \
 
 OBJS			= $(SRCS:.cpp=.o)
 
-CPP				= clang++
+CPP				= g++#clang++
 RM				= rm -f
 CPPFLAGS		= -Wall -Wextra -Werror -I. -std=c++98 -pedantic
 
