--- a/03/ex01/Makefile
+++ b/03/ex01/Makefile
@@ -6,16 +6,17 @@
 #    By: mtak <mtak@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/08/27 23:26:05 by mtak              #+#    #+#              #
-#    Updated: 2021/08/27 23:27:09 by mtak             ###   ########.fr        #
+#    Updated: 2021/08/28 02:40:00 by mtak             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 SRCS = main.cpp \
 		ClapTrap.cpp \
+		ScavTrap.cpp
 
 OBJS			= $(SRCS:.cpp=.o)
 
-CPP				= g++#clang++
+CPP				= clang++
 RM				= rm -f
 CPPFLAGS		= -Wall -Wextra -Werror -I. -std=c++98 -pedantic
 
