--- a/06/ex00/Makefile
+++ b/06/ex00/Makefile
@@ -6,11 +6,12 @@
 #    By: mtak <mtak@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/09/21 18:39:29 by mtak              #+#    #+#              #
-#    Updated: 2021/09/21 18:42:42 by mtak             ###   ########.fr        #
+#    Updated: 2021/09/22 16:53:19 by mtak             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRCS = main.cpp
+SRCS = main.cpp \
+		Number.cpp
 
 OBJS			= $(SRCS:.cpp=.o)
 
@@ -18,7 +19,7 @@ CPP				= clang++
 RM				= rm -f
 CPPFLAGS		= -Wall -Wextra -Werror -I. -std=c++98 -pedantic
 
-NAME			= a.out
+NAME			= convert
 
 all:			$(NAME)
 
