--- a/06/ex02/Makefile
+++ b/06/ex02/Makefile
@@ -5,13 +5,12 @@
 #                                                     +:+ +:+         +:+      #
 #    By: mtak <mtak@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/09/21 18:39:29 by mtak              #+#    #+#              #
-#    Updated: 2021/09/23 16:48:03 by mtak             ###   ########.fr        #
+#    Created: 2021/09/23 15:23:03 by mtak              #+#    #+#              #
+#    Updated: 2021/09/24 14:33:25 by mtak             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRCS = main.cpp \
-		Value.cpp
+SRCS = main.cpp 
 
 OBJS			= $(SRCS:.cpp=.o)
 
@@ -19,7 +18,7 @@ CPP				= clang++
 RM				= rm -f
 CPPFLAGS		= -Wall -Wextra -Werror -I. -std=c++98 -pedantic
 
-NAME			= convert
+NAME			= class
 
 all:			$(NAME)
 
